--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/three": "^0.155.1",
     "less": "^4.2.0",
     "three": "^0.155.0",
     "vue": "^3.3.4"
