--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "gsap": "^3.12.2",
+    "lil-gui": "^0.18.2",
     "vite": "^4.4.5"
   }
 }
