--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "gsap": "^3.12.2",
     "lil-gui": "^0.18.2",
+    "postcss-pxtorem": "^6.0.0",
     "vite": "^4.4.5"
   }
 }
