--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
-  "printWidth": 120,
-  "tabWidth": 2,
-  "useTabs": false,
+  "$schema": "https://json.schemastore.org/prettierrc",
   "semi": true,
+  "useTabs": false,
+  "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "all",
-  "bracketSpacing": true,
-  "arrowParens": "always"
+  "printWidth": 120,
+  "trailingComma": "all"
 }
