--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
   "name": "three",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "less": "^4.2.0",
-    "three": "^0.155.0",
-    "vue": "^3.3.4"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@types/three": "^0.156.0",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@types/postcss-pxtorem": "^6.0.3",
+    "@types/three": "^0.162.0",
+    "less": "^4.2.0",
+    "postcss": "^8.4.35",
+    "postcss-pxtorem": "^6.1.0"
+  },
+  "dependencies": {
+    "@tresjs/cientos": "^3.8.0",
+    "@tresjs/nuxt": "^2.1.1",
     "cannon-es": "^0.20.0",
-    "gsap": "^3.12.2",
-    "lil-gui": "^0.18.2",
-    "postcss": "^8.4.29",
-    "postcss-pxtorem": "^6.0.0",
-    "stats.js": "^0.17.0",
-    "vite": "^4.4.5"
+    "gsap": "^3.12.5",
+    "nuxt": "^3.10.3",
+    "three": "^0.162.0",
+    "vue": "^3.4.19",
+    "vue-router": "^4.3.0"
+  },
+  "volta": {
+    "node": "20.11.1"
   }
 }
