--- a/package.json
+++ b/package.json
@@ -13,19 +13,17 @@
     "@types/postcss-pxtorem": "^6.0.3",
     "@types/three": "^0.162.0",
     "less": "^4.2.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.41",
     "postcss-pxtorem": "^6.1.0"
   },
   "dependencies": {
-    "@tresjs/cientos": "^3.8.0",
-    "@tresjs/core": "^3.7.0",
-    "@tresjs/nuxt": "^2.1.1",
     "cannon-es": "^0.20.0",
     "gsap": "^3.12.5",
-    "nuxt": "^3.10.3",
+    "lil-gui": "^0.19.2",
+    "nuxt": "^3.13.0",
     "three": "^0.162.0",
     "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.4.3"
   },
   "volta": {
     "node": "20.11.1"
