feat(three-container): Added three-container to reduce boilerplating, bumped dependencies.

--- a/package.json
+++ b/package.json
@@ -7,25 +7,28 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "update": "npm install -g npm-check-updates && ncu --interactive --format group"
   },
   "devDependencies": {
-    "@types/postcss-pxtorem": "^6.0.3",
+    "@types/postcss-pxtorem": "^6.1.0",
     "@types/three": "^0.162.0",
+    "@vueuse/core": "^11.1.0",
+    "@vueuse/nuxt": "^11.1.0",
     "less": "^4.2.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.47",
     "postcss-pxtorem": "^6.1.0"
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
     "gsap": "^3.12.5",
     "lil-gui": "^0.19.2",
-    "nuxt": "^3.13.0",
+    "nuxt": "^3.13.2",
     "three": "^0.162.0",
-    "vue": "^3.4.19",
-    "vue-router": "^4.4.3"
+    "vue": "^3.5.11",
+    "vue-router": "^4.4.5"
   },
   "volta": {
-    "node": "20.11.1"
+    "node": "22.9.0"
   }
 }
